fix: update database insert logic, add null price validation, implement global exception handler, refactor test to focus on ServicePort validation and update version pom.xml